#214 fix horizontal scroll on iphone

--- a/src/components/Comments/Form/styles.css
+++ b/src/components/Comments/Form/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 20px;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .form :global(.cover_small) {
@@ -245,5 +246,5 @@
 
 .dragNdrop {
   display: flex;
-  align-items: flex-end; 
+  align-items: flex-end;
 }
