--- a/src/components/Countdown/styles.css
+++ b/src/components/Countdown/styles.css
@@ -31,6 +31,7 @@
   opacity: 0.6;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-top: 10px;
+  white-space: nowrap;
 }
 
 @media (max-width: 767px) {
